--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 <span>Spotify</span>
               </a>
               <a href="#" class="spotify-link">
-                <img src="assets/spotify.png" alt="Spotify" />
+                <img src="assets/apple-podcast.png" alt="Spotify" />
                 <span>Apple Podcasts</span>
               </a>
               <a href="#" class="spotify-link">
@@ -408,7 +408,7 @@
             </div>
 
             <p class="copyright">
-              © 2026 TechWave Podcast. All rights reserved.
+             © 2026 TechWave Podcast. All rights reserved.
             </p>
           </div>
         </footer>
